--- a/scene/layers/boundaries.yaml
+++ b/scene/layers/boundaries.yaml
@@ -1,26 +1,27 @@
 layers:
     boundaries:
-        data: { source: mapzen, layer: boundaries }
+        data: { source: mapzen }
         draw:
-            lines:
+            boundaries:
                 order: global.order
                 color: black
-        country:
+
+        boundaries-country:
             filter:
                 any:
                     - type: country
                     - kind: nation
                     - admin_level: 2
             draw:
-                lines:
+                boundaries:
                     width: [[1, 0px], [3, 0px], [4, 1.5px], [9, 2.5px], [14, 3.5px], [16, 4.5px], [17, 14m]]
-            water:
+            boundaries-country-water:
                 filter: { maritime_boundary: yes }
                 draw:
-                    lines:
+                    boundaries:
                         visible: false
 
-        region:
+        boundaries-region:
             filter:
                 any:
                     - type: state
@@ -31,16 +32,21 @@ layers:
                     # deal with bogus Hungary data
                     - scalerank: 0
             draw:
-                lines:
+                boundaries:
                     color: black
                     width: [[0, 0px], [5, 0px], [6, 0.5px], [8, 1px], [14, 1.5px], [16, 3.0px], [17, 10m]]
-            water:
+            boundaries-region-water:
                 filter: { maritime_boundary: yes }
                 draw:
-                    lines:
+                    boundaries:
                         visible: false
-            early:
+            boundaries-region-early:
                 filter: { scalerank: [0,3,4,5,6,7,8,9,10], $zoom: { max: 8 } }
                 draw:
-                    lines:
+                    boundaries:
                         visible: false
+
+styles:
+    boundaries:
+        base: lines
+
