--- a/scene/layers/boundaries.yaml
+++ b/scene/layers/boundaries.yaml
@@ -2,7 +2,8 @@ layers:
     boundaries:
         data: { source: mapzen }
         draw:
-            boundaries:
+            lines:
+                style: boundaries
                 order: global.order
                 color: black
 
@@ -13,12 +14,12 @@ layers:
                     - kind: nation
                     - admin_level: 2
             draw:
-                boundaries:
+                lines:
                     width: [[1, 0px], [3, 0px], [4, 1.5px], [9, 2.5px], [14, 3.5px], [16, 4.5px], [17, 14m]]
             boundaries-country-water:
                 filter: { maritime_boundary: yes }
                 draw:
-                    boundaries:
+                    lines:
                         visible: false
 
         boundaries-region:
@@ -32,18 +33,18 @@ layers:
                     # deal with bogus Hungary data
                     - scalerank: 0
             draw:
-                boundaries:
+                lines:
                     color: black
                     width: [[0, 0px], [5, 0px], [6, 0.5px], [8, 1px], [14, 1.5px], [16, 3.0px], [17, 10m]]
             boundaries-region-water:
                 filter: { maritime_boundary: yes }
                 draw:
-                    boundaries:
+                    lines:
                         visible: false
             boundaries-region-early:
                 filter: { scalerank: [0,3,4,5,6,7,8,9,10], $zoom: { max: 8 } }
                 draw:
-                    boundaries:
+                    lines:
                         visible: false
 
 styles:
