--- a/scene/layers/earth.yaml
+++ b/scene/layers/earth.yaml
@@ -1,17 +1,20 @@
 layers:
     earth:
         data: { source: mapzen }
+        draw:
+            polygons:
+                order: global.order
+                color: [0.534, 0.736, 1.000]
         earth-early:
             filter: { $zoom: { max: 6 } }
             draw:
-                earth-early:
-                    order: global.order
-                    color: [0.534, 0.736, 1.000]
+                polygons:
+                    style: earth-early
         earth-later:
             filter: { $zoom: { min: 5 } }
             draw:
-                earth-later:
-                    order: global.order
+                polygons:
+                    style: earth-later
                     color: [[5,[0.267,0.365,0.502]],[8,[0.213,0.302,0.433]]]
 
 styles:
@@ -30,28 +33,29 @@ styles:
 
     earth-later:
         base: polygons
+        # mix: [terrain]
 
-    # terrain:
-    #     base: polygons
-    #     raster: normal
-    #     shaders:
-    #         uniforms:
-    #             u_scale: 2 # higher values are more exaggerated
-    #             u_envmap: ../images/tron-terrain.jpg
-    #         blocks:
-    #             global: |
-    #                 vec4 terrainEnvmap (in sampler2D _tex, in vec3 _normal) {
-    #                     const vec3 eye = vec3(0.,0.,-1.);
-    #                     vec3 r = reflect(eye, _normal);
-    #                     r.z += 1.0;
-    #                     float m = 2. * length(r);
-    #                     vec2 uv = r.xy / m + .5;
-    #                     return texture2D(_tex, uv);
-    #                 }
-    #             color: |              
-    #                 // color = v_color;
-    #                 normal.z /= u_scale; // turn terrain exaggeration up/down
-    #                 normal = normalize(normal);
-    #                 color = terrainEnvmap(u_envmap, normal);
+    terrain:
+        base: polygons
+        raster: normal
+        shaders:
+            uniforms:
+                u_scale: 2 # higher values are more exaggerated
+                u_envmap: ../images/tron-terrain.jpg
+            blocks:
+                global: |
+                    vec4 terrainEnvmap (in sampler2D _tex, in vec3 _normal) {
+                        const vec3 eye = vec3(0.,0.,-1.);
+                        vec3 r = reflect(eye, _normal);
+                        r.z += 1.0;
+                        float m = 2. * length(r);
+                        vec2 uv = r.xy / m + .5;
+                        return texture2D(_tex, uv);
+                    }
+                color: |              
+                    // color = v_color;
+                    normal.z /= u_scale; // turn terrain exaggeration up/down
+                    normal = normalize(normal);
+                    color = terrainEnvmap(u_envmap, normal);
                     
-    #                 // color *= v_color; // apply layer color to envmap
+                    // color *= v_color; // apply layer color to envmap
