--- a/scene/layers/roads.yaml
+++ b/scene/layers/roads.yaml
@@ -4,23 +4,24 @@ layers:
         filter: { not: { kind: rail } }
         draw:
             lines:
+                styles: roads
                 width: 1px
                 order: global.order
                 outline:
-                order: 352
-        early:
+                    order: 352
+        roads-early:
             filter: { $zoom: { max: 15} }
             draw:
                 lines:
                     outline:
                         order: global.order
-        bridges-tunnels:
+        roads-bridges_and_tunnels:
             filter: { any: [is_bridge: yes, is_tunnel: yes] }
             draw:
                 lines:
                     outline:
                         order: global.order
-        natural_earth_highways:
+        roads-natural_earth_highways:
             filter: { source: 'naturalearthdata.com' }
             draw:
                 lines:
@@ -29,7 +30,7 @@ layers:
                     # outline:
                     #     color: [0.541,0.969,0.949]
                     #     width: [[5,0px],[6,0px]]
-            major_road:
+            roads-natural_earth_highways-major_road:
                 filter: { type: ['Secondary Highway','Road'] }
                 draw:
                     lines:
@@ -37,13 +38,13 @@ layers:
                         width: [[5,0.5px],[6,0.75px]]
                         # outline:
                         #     width: 1px
-            minor_road:
+            roads-natural_earth_highways-minor_road:
                 filter: { type: 'Unknown' }
                 draw:
                     lines:
                         color: [0.333,0.518,0.612]
                         width: 0.5px
-        highway:
+        roads-highway:
             filter: { kind: highway }
             draw:
                 lines:
@@ -52,3 +53,7 @@ layers:
                     outline:
                         color: [0.541,0.969,0.949]
                         width: [[8,0.5px],[9,1px]]
+
+styles:
+    roads:
+        base: lines
