--- a/scene/styles/lines.yaml
+++ b/scene/styles/lines.yaml
@@ -1,10 +1,19 @@
 styles:
-    coast-lines:
+    coast:
         base: lines
         mix: [patterns-stripes, space-tile]
         texcoords: true
-        blend: inlay
+        animate: true
+        blend: add
         shaders:
+            defines:
+                COAST_WAVES_AMOUNT: 5.
+                COAST_WAVES_SPEED: 0.1
             blocks:
                 color: |
-                    color.a *= smoothstep(0.,1.972,1.-v_texcoord.x);
+                    float pct = 0.0;
+                    // glow
+                    pct = smoothstep(0.,2.,1.-v_texcoord.x);
+                    // waves
+                    pct += (1.-fract(v_texcoord.x*COAST_WAVES_AMOUNT+(fract(u_time*COAST_WAVES_SPEED))))*pct;
+                    color *= pct;
